# rosemary

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  postgres.rs  queries.rs  query_functions.rs  themes.rs  ui.rs
src/query_functions/: pg_data.rs  pg_query_handlers.rs
src/ui/: connections_panel.rs  databases_panel.rs  editor_panel.rs  pagination_panel.rs  query_metrics_panel.rs  results_table_panel.rs  running_queries_panel.rs  secondary_results_table_panel.rs  tables_panel.rs
