[package]
name = "rosemary"
version = "0.1.0"
authors = ["Charlie Eeles <charlie.eeles@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
egui_extras = {version = "0.29.0", features = ["syntect"]}
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
tokio = {version = "1.42.0", features = ["full"]}
dotenv = "0.15.0"
catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

